--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://127.0.0.1:3306/carrot-market"
+TWILIO_SID=AC2dc03b5295b18ecdc0efdd96da92b28a
+TWILIO_TOKEN=fcf844249645a77cfe7d4a6ef37b9ef8
